lib/src/compiler/tests/testdata/errors/69.out
error: syntax error
 --> line:1:23
  |
1 | rule test { meta: a = condition: true }
  |                       ^ expected `false`, `true`, multiline string literal, number, or string literal
  |